--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.8",
     "react": "18.2.0",
-    "react-native": "^0.73.6",
+    "react-native": "^0.74.0-rc.6",
     "react-native-localize": "^3.0.3",
     "react-native-test-app": "^3.5.3",
     "react-native-windows": "^0.71.3",
