--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
   "devDependencies": {
     "@react-native-segmented-control/segmented-control": "^2.4.0",
     "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.73.2",
+    "@react-native/metro-config": "^0.73.0",
+    "@rnx-kit/align-deps": "^2.4.1",
     "@semantic-release/git": "^10.0.1",
     "@testing-library/react-native": "9.1.0",
     "babel-jest": "^29.5.0",
@@ -79,17 +80,17 @@
     "eslint-plugin-prettier": "^4.2.1",
     "flow-bin": "^0.182.0",
     "flow-typed": "^3.8.0",
-    "jest": "^29.5.0",
+    "jest": "^29.2.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.41",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.8",
     "react": "18.2.0",
-    "react-native": "^0.72.7",
+    "react-native": "^0.73.0",
     "react-native-localize": "^3.0.3",
-    "react-native-test-app": "^2.5.32",
-    "react-native-windows": "^0.71.3",
+    "react-native-test-app": "^2.5.34",
+    "react-native-windows": "^0.73.0",
     "react-test-renderer": "18.2.0",
     "semantic-release": "^19.0.3"
   },
@@ -103,5 +104,34 @@
     "android": {
       "javaPackageName": "com.reactcommunity.rndatetimepicker"
     }
+  },
+  "rnx-kit": {
+    "kitType": "library",
+    "alignDeps": {
+      "requirements": {
+        "development": [
+          "react-native@0.73"
+        ],
+        "production": [
+          "react-native@0.73"
+        ]
+      },
+      "capabilities": [
+        "core",
+        "core-android",
+        "core-ios",
+        "core-windows",
+        "core/metro-config",
+        "jest",
+        "react",
+        "react-test-renderer",
+        "test-app"
+      ]
+    }
+  },
+  "peerDependencies": {
+    "react": "18.2.0",
+    "react-native": "^0.73.0",
+    "react-native-windows": "^0.73.0"
   }
 }
