--- a/package.json
+++ b/package.json
@@ -128,5 +128,9 @@
     "react": "18.2.0",
     "react-native": "^0.73.0",
     "react-native-windows": "^0.73.0"
-  }
+  },
+  "packageManager": "yarn@4.1.1",
+  "workspaces": [
+    "example"
+  ]
 }
