--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
   },
   "homepage": "https://github.com/react-native-community/datetimepicker#readme",
   "devDependencies": {
+    "@callstack/react-native-visionos": "^0.73.0",
+    "@react-native-segmented-control/segmented-control": "^2.4.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.73.0",
     "@rnx-kit/align-deps": "^2.4.1",
@@ -80,11 +82,15 @@
     "flow-bin": "^0.182.0",
     "flow-typed": "^3.8.0",
     "jest": "^29.2.1",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.41",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-native": "^0.73.0",
+    "react-native-localize": "^3.0.3",
+    "react-native-test-app": "^3.5.3",
     "react-native-windows": "^0.73.0",
     "react-test-renderer": "18.2.0",
     "semantic-release": "^19.0.3"
@@ -98,30 +104,6 @@
     "jsSrcsDir": "src/specs",
     "android": {
       "javaPackageName": "com.reactcommunity.rndatetimepicker"
-    }
-  },
-  "rnx-kit": {
-    "kitType": "library",
-    "alignDeps": {
-      "requirements": {
-        "development": [
-          "react-native@0.73"
-        ],
-        "production": [
-          "react-native@0.73"
-        ]
-      },
-      "capabilities": [
-        "core",
-        "core-android",
-        "core-ios",
-        "core-windows",
-        "core/metro-config",
-        "jest",
-        "react",
-        "react-test-renderer",
-        "test-app"
-      ]
     }
   },
   "peerDependencies": {
