--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -37,7 +37,40 @@ allprojects {
                 throw new GradleException("Could not find `react-native`");
             }())
         }
+        maven {
+             // All of Detox' artifacts are provided via the npm module
+             url "$rootDir/../../node_modules/detox/Detox-android"
+         }
         mavenCentral()
         google()
+    }
+    afterEvaluate { project ->
+        def androidExtension = project.extensions.findByName('android')
+        if (androidExtension != null && project.name == 'app') {
+            androidExtension.defaultConfig {
+                ndk {
+                    abiFilters 'arm64-v8a', 'x86', 'x86_64'
+                }
+            }
+
+            androidExtension.signingConfigs {
+                test {
+                    keyAlias "androiddebugkey"
+                    keyPassword "android"
+                    storeFile file("debug.keystore")
+                    storePassword "android"
+                }
+            }
+
+            androidExtension.buildTypes.debug.signingConfig = androidExtension.signingConfigs.test
+            androidExtension.buildTypes.release.signingConfig = androidExtension.signingConfigs.test
+            androidExtension.testBuildType = System.getProperty('testBuildType', 'debug')
+
+            androidExtension.sourceSets.androidTest.java.srcDirs += "$rootDir/app/src/androidTest/java"
+
+            project.dependencies {
+                androidTestImplementation('com.wix:detox:+')
+            }
+        }
     }
 }
