--- a/example/app.json
+++ b/example/app.json
@@ -1,10 +1,20 @@
 {
+  "$schema": "https://raw.githubusercontent.com/microsoft/react-native-test-app/trunk/schema.json",
   "name": "date-time-picker-example",
   "displayName": "date-time-picker-example",
+  "singleApp": "date-time-picker-example",
+  "android": {
+    "package": "com.datetimepickerexample"
+  },
+  "ios": {
+    "bundleIdentifier": "com.datetimepickerexample",
+    "developmentTeam": ""
+  },
   "components": [
     {
       "appKey": "date-time-picker-example",
-      "displayName": "date-time-picker-example"
+      "displayName": "date-time-picker-example",
+      "slug": "date-time-picker-example"
     }
   ],
   "resources": {
