--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react": "18.2.0",
     "react-native": "^0.73.0",
     "react-native-localize": "^3.0.3",
+    "react-native-macos": "^0.73.24",
     "react-native-test-app": "^3.5.3",
     "react-native-windows": "^0.73.0",
     "react-test-renderer": "18.2.0",
@@ -107,6 +108,7 @@
   "peerDependencies": {
     "react": "18.2.0",
     "react-native": "^0.73.0",
+    "react-native-macos": "^0.73.24",
     "react-native-windows": "^0.73.0"
   },
   "packageManager": "yarn@4.1.1",
