--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "src",
     "jest",
     "flow-typed",
+    "macos",
     "windows",
     "RNDateTimePicker.podspec",
     "!android/build",
@@ -97,6 +98,10 @@
   "dependencies": {
     "invariant": "^2.2.4"
   },
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
+  },
   "codegenConfig": {
     "name": "RNDateTimePickerCGen",
     "type": "all",
@@ -104,12 +109,6 @@
     "android": {
       "javaPackageName": "com.reactcommunity.rndatetimepicker"
     }
-  },
-  "peerDependencies": {
-    "react": "18.2.0",
-    "react-native": "^0.73.0",
-    "react-native-macos": "^0.73.24",
-    "react-native-windows": "^0.73.0"
   },
   "packageManager": "yarn@4.1.1",
   "workspaces": [
